implement the spotify player look + add sidebar, body and footer (player) + populate the sidebar with playlists dynamically + add footer and style it to look like the spotify player

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -6,7 +6,11 @@
 }
 
 .login > img {
+  position: absolute;
+  top: 100px;
   width: 100%;
+  height: 200px;
+  object-fit: contain;
 }
 
 .login > a {
