build complete +add player features: play, pause next, previous. +change styling to match official spotify web player
NOTE: The functionalites will not work unless it's a PREMIUM account.

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,5 +1,5 @@
 .body {
-  flex: 0.8;
+  flex: 0.9;
   height: 100vh;
   color: white;
   padding: 30px;
@@ -18,7 +18,7 @@
 }
 
 .body__info > img {
-  height: 20vw;
+  height: 15vw;
   margin: 0 20px;
   box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
 }
@@ -28,7 +28,7 @@
 }
 
 .body__infoText > h2 {
-  font-size: 48px;
+  font-size: 100px;
   margin-bottom: 10px;
 }
 
@@ -38,6 +38,7 @@
 
 .body__songs {
   margin: 20px -30px;
+  background: linear-gradient(rgb(28, 27, 36, 0.5), rgba(0, 0, 0, 1));
 }
 
 .body__icons {
