--- a/src/components/SongRow.css
+++ b/src/components/SongRow.css
@@ -1,29 +1,39 @@
 .songRow {
-  margin-left: 20px;
+  margin: 0 20px;
   padding: 20px;
   display: flex;
   align-items: center;
   color: white;
+  transition: 50ms background-color ease-in;
 }
 
 .songRow:hover {
   cursor: pointer;
-  background-color: black;
+  background-color: hsla(0, 0%, 100%, 0.1);
   opacity: 0.8;
 }
 
 .songRow__info {
   margin-left: 20px;
+  width: 100%;
 }
 
 .songRow__info > h1 {
   font-size: 16px;
 }
 
-.songRow__info > p {
+.songRow__songDetails > p {
+  display: flex;
+  align-items: center;
   font-size: 14px;
   margin-top: 3px;
   color: gray;
+}
+
+.songRow__songDetails {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .songRow__album {
